--- a/src/main/resources/templetes/HPTReception.html
+++ b/src/main/resources/templetes/HPTReception.html
@@ -51,8 +51,6 @@
             <td>소아 진료</td>
             <td></td>
             <td>접수대기</td>
-            <td><a href="HPTReception.html" th:href="@{/templates/}" class="hidden-link">접수</a>&nbsp;&nbsp;&nbsp;
-                <a href="HPTReception.html" th:href="@{/templates/}" class="hidden-link">거절</a></td>
         </tr>
         <tr>
             <td>3</td>
@@ -68,7 +66,7 @@
             <td>영유아검진</td>
             <td>2023-04-25 15:35:22</td>
             <td>진료 전</td>
-            <td></td>
+            <td><a href="HPTReception.html" th:href="@{/templates/}" class="hidden-link">진료완료</a></td></td>
         </tr>
         <tr>
             <td>1</td>
